// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Init state without clients 1`] = `
"<div><div class=\\"panel panel-default\\"><div class=\\"panel-heading\\"><div style=\\"display: flex;\\"><span>
                       OAuth Clients
                    </span><a class=\\"action-link\\">
                        Create New Client
                    </a></div></div><div class=\\"panel-body\\"><p class=\\"m-b-none\\">
                    You have not created any OAuth clients.
                </p><!----></div></div><div id=\\"modal-create-client\\" tabindex=\\"-1\\" role=\\"dialog\\" class=\\"modal fade\\"><div class=\\"modal-dialog\\"><div class=\\"modal-content\\"><div class=\\"modal-header\\"><button type=\\"button \\" data-dismiss=\\"modal\\" aria-hidden=\\"true\\" class=\\"close\\">×</button><h4 class=\\"modal-title\\">
                            Create Client
                        </h4></div><div class=\\"modal-body\\"><!----><form role=\\"form\\" class=\\"form-horizontal\\"><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Name</label><div class=\\"col-md-7\\"><input id=\\"create-client-name\\" type=\\"text\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Something your users will recognize and trust.
                                    </span></div></div><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Redirect URL</label><div class=\\"col-md-7\\"><input type=\\"text\\" name=\\"redirect\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Your application's authorization callback URL.
                                    </span></div></div></form></div><div class=\\"modal-footer\\"><button type=\\"button\\" data-dismiss=\\"modal\\" class=\\"btn btn-default\\">Close</button><button type=\\"button\\" class=\\"btn btn-primary\\">
                            Create
                        </button></div></div></div></div><div id=\\"modal-edit-client\\" tabindex=\\"-1\\" role=\\"dialog\\" class=\\"modal fade\\"><div class=\\"modal-dialog\\"><div class=\\"modal-content\\"><div class=\\"modal-header\\"><button type=\\"button \\" data-dismiss=\\"modal\\" aria-hidden=\\"true\\" class=\\"close\\">×</button><h4 class=\\"modal-title\\">
                            Edit Client
                        </h4></div><div class=\\"modal-body\\"><!----><form role=\\"form\\" class=\\"form-horizontal\\"><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Name</label><div class=\\"col-md-7\\"><input id=\\"edit-client-name\\" type=\\"text\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Something your users will recognize and trust.
                                    </span></div></div><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Redirect URL</label><div class=\\"col-md-7\\"><input type=\\"text\\" name=\\"redirect\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                         Your application's authorization callback URL.
                                    </span></div></div></form></div><div class=\\"modal-footer\\"><button type=\\"button\\" data-dismiss=\\"modal\\" class=\\"btn btn-default\\">Close</button><button type=\\"button\\" class=\\"btn btn-primary\\">
                            Save Changes
                        </button></div></div></div></div></div>"
`;

exports[`Should render OAuth clients table 1`] = `
"<div><div class=\\"panel panel-default\\"><div class=\\"panel-heading\\"><div style=\\"display: flex;\\"><span>
                       OAuth Clients
                    </span><a class=\\"action-link\\">
                        Create New Client
                    </a></div></div><div class=\\"panel-body\\"><!----><table class=\\"table table-borderless m-b-none\\"><thead><tr><th>Client ID</th><th>Name</th><th>Secret</th><th></th><th></th></tr></thead><tbody><tr><td style=\\"vertical-align: middle;\\">
                                1
                            </td><td style=\\"vertical-align: middle;\\">
                                OAuth Client 1
                            </td><td style=\\"vertical-align: middle;\\"><code></code></td><td style=\\"vertical-align: middle;\\"><a class=\\"action-link\\">
                                    Edit
                                </a></td><td style=\\"vertical-align: middle;\\"><a class=\\"action-link text-danger\\">
                                    Delete
                                </a></td></tr><tr><td style=\\"vertical-align: middle;\\">
                                2
                            </td><td style=\\"vertical-align: middle;\\">
                                OAuth Client 2
                            </td><td style=\\"vertical-align: middle;\\"><code></code></td><td style=\\"vertical-align: middle;\\"><a class=\\"action-link\\">
                                    Edit
                                </a></td><td style=\\"vertical-align: middle;\\"><a class=\\"action-link text-danger\\">
                                    Delete
                                </a></td></tr></tbody></table></div></div><div id=\\"modal-create-client\\" tabindex=\\"-1\\" role=\\"dialog\\" class=\\"modal fade\\"><div class=\\"modal-dialog\\"><div class=\\"modal-content\\"><div class=\\"modal-header\\"><button type=\\"button \\" data-dismiss=\\"modal\\" aria-hidden=\\"true\\" class=\\"close\\">×</button><h4 class=\\"modal-title\\">
                            Create Client
                        </h4></div><div class=\\"modal-body\\"><!----><form role=\\"form\\" class=\\"form-horizontal\\"><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Name</label><div class=\\"col-md-7\\"><input id=\\"create-client-name\\" type=\\"text\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Something your users will recognize and trust.
                                    </span></div></div><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Redirect URL</label><div class=\\"col-md-7\\"><input type=\\"text\\" name=\\"redirect\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Your application's authorization callback URL.
                                    </span></div></div></form></div><div class=\\"modal-footer\\"><button type=\\"button\\" data-dismiss=\\"modal\\" class=\\"btn btn-default\\">Close</button><button type=\\"button\\" class=\\"btn btn-primary\\">
                            Create
                        </button></div></div></div></div><div id=\\"modal-edit-client\\" tabindex=\\"-1\\" role=\\"dialog\\" class=\\"modal fade\\"><div class=\\"modal-dialog\\"><div class=\\"modal-content\\"><div class=\\"modal-header\\"><button type=\\"button \\" data-dismiss=\\"modal\\" aria-hidden=\\"true\\" class=\\"close\\">×</button><h4 class=\\"modal-title\\">
                            Edit Client
                        </h4></div><div class=\\"modal-body\\"><!----><form role=\\"form\\" class=\\"form-horizontal\\"><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Name</label><div class=\\"col-md-7\\"><input id=\\"edit-client-name\\" type=\\"text\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Something your users will recognize and trust.
                                    </span></div></div><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Redirect URL</label><div class=\\"col-md-7\\"><input type=\\"text\\" name=\\"redirect\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                         Your application's authorization callback URL.
                                    </span></div></div></form></div><div class=\\"modal-footer\\"><button type=\\"button\\" data-dismiss=\\"modal\\" class=\\"btn btn-default\\">Close</button><button type=\\"button\\" class=\\"btn btn-primary\\">
                            Save Changes
                        </button></div></div></div></div></div>"
`;

exports[`Should render OAuth clients table after 100 ms delay 1`] = `
"<div><div class=\\"panel panel-default\\"><div class=\\"panel-heading\\"><div style=\\"display: flex;\\"><span>
                       OAuth Clients
                    </span><a class=\\"action-link\\">
                        Create New Client
                    </a></div></div><div class=\\"panel-body\\"><!----><table class=\\"table table-borderless m-b-none\\"><thead><tr><th>Client ID</th><th>Name</th><th>Secret</th><th></th><th></th></tr></thead><tbody><tr><td style=\\"vertical-align: middle;\\">
                                1
                            </td><td style=\\"vertical-align: middle;\\">
                                OAuth Client 1
                            </td><td style=\\"vertical-align: middle;\\"><code></code></td><td style=\\"vertical-align: middle;\\"><a class=\\"action-link\\">
                                    Edit
                                </a></td><td style=\\"vertical-align: middle;\\"><a class=\\"action-link text-danger\\">
                                    Delete
                                </a></td></tr><tr><td style=\\"vertical-align: middle;\\">
                                2
                            </td><td style=\\"vertical-align: middle;\\">
                                OAuth Client 2
                            </td><td style=\\"vertical-align: middle;\\"><code></code></td><td style=\\"vertical-align: middle;\\"><a class=\\"action-link\\">
                                    Edit
                                </a></td><td style=\\"vertical-align: middle;\\"><a class=\\"action-link text-danger\\">
                                    Delete
                                </a></td></tr></tbody></table></div></div><div id=\\"modal-create-client\\" tabindex=\\"-1\\" role=\\"dialog\\" class=\\"modal fade\\"><div class=\\"modal-dialog\\"><div class=\\"modal-content\\"><div class=\\"modal-header\\"><button type=\\"button \\" data-dismiss=\\"modal\\" aria-hidden=\\"true\\" class=\\"close\\">×</button><h4 class=\\"modal-title\\">
                            Create Client
                        </h4></div><div class=\\"modal-body\\"><!----><form role=\\"form\\" class=\\"form-horizontal\\"><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Name</label><div class=\\"col-md-7\\"><input id=\\"create-client-name\\" type=\\"text\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Something your users will recognize and trust.
                                    </span></div></div><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Redirect URL</label><div class=\\"col-md-7\\"><input type=\\"text\\" name=\\"redirect\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Your application's authorization callback URL.
                                    </span></div></div></form></div><div class=\\"modal-footer\\"><button type=\\"button\\" data-dismiss=\\"modal\\" class=\\"btn btn-default\\">Close</button><button type=\\"button\\" class=\\"btn btn-primary\\">
                            Create
                        </button></div></div></div></div><div id=\\"modal-edit-client\\" tabindex=\\"-1\\" role=\\"dialog\\" class=\\"modal fade\\"><div class=\\"modal-dialog\\"><div class=\\"modal-content\\"><div class=\\"modal-header\\"><button type=\\"button \\" data-dismiss=\\"modal\\" aria-hidden=\\"true\\" class=\\"close\\">×</button><h4 class=\\"modal-title\\">
                            Edit Client
                        </h4></div><div class=\\"modal-body\\"><!----><form role=\\"form\\" class=\\"form-horizontal\\"><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Name</label><div class=\\"col-md-7\\"><input id=\\"edit-client-name\\" type=\\"text\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                        Something your users will recognize and trust.
                                    </span></div></div><div class=\\"form-group\\"><label class=\\"col-md-3 control-label\\">Redirect URL</label><div class=\\"col-md-7\\"><input type=\\"text\\" name=\\"redirect\\" class=\\"form-control\\"><span class=\\"help-block\\">
                                         Your application's authorization callback URL.
                                    </span></div></div></form></div><div class=\\"modal-footer\\"><button type=\\"button\\" data-dismiss=\\"modal\\" class=\\"btn btn-default\\">Close</button><button type=\\"button\\" class=\\"btn btn-primary\\">
                            Save Changes
                        </button></div></div></div></div></div>"
`;
